@@ -391,8 +391,7 @@ text \<open>
   \<^medskip>
   Option \<^verbatim>\<open>-s\<close> enables \<^emph>\<open>system mode\<close>, which means that resulting heap images
   and log files are stored in @{path "$ISABELLE_HOME/heaps"} instead of the
-  default location @{setting ISABELLE_OUTPUT} (which is normally in @{setting
-  ISABELLE_HOME_USER}, i.e.\ the user's home directory).
+  default location @{path "$ISABELLE_HOME_USER/heaps"}.
 
   \<^medskip>
   Option \<^verbatim>\<open>-v\<close> increases the general level of verbosity. Option \<^verbatim>\<open>-l\<close> lists
